# ProcesadorMIPS32

MIPS32SOC-Part1/test-cases/: CMakeLists.txt  test_MIPS32SOC.cpp
MIPS32SOC-Part1/tools/: VTransform
MIPS32SOC-Part1/verilog/: MIPS32SOC.v  MIPS32SOC_ORI.v
MIPS32SOC-Part2/test-cases/: CMakeLists.txt  test_MIPS32SOC.cpp  tests-code.cpp
MIPS32SOC-Part2/tools/: vrewrite
MIPS32SOC-Part2/verilog/: mips32soc_repl.v
MIPS32SOC-Part3/: .~lock.ControlUnit.xlsx#  README.md
MIPS32SOC-Part3/test-cases/: CMakeLists.txt  test_MIPS32SOC.cpp  tests-code.cpp
MIPS32SOC-Part3/tools/: vrewrite
MIPS32SOC-Part3/verilog/: MIPS32SOC.v  mips32soc_repl.v
MIPS32SOC_P1_2020/: ALU.dig  ALUControl.dig  ControlUnit10test.dig  Dividendo.dig  Divisor.dig  MIPS32SOC.dig  MIPS32SOC.v  memdecoder.dig  pcdecoder.dig
